Updated Fresh Eats with link

--- a/fresh-eats.html
+++ b/fresh-eats.html
@@ -49,10 +49,10 @@
                                 </div>
                                 <div class = "col d-flex flex-column justify-content-center">
                                     <section class = "margin-auto line-heights">
-                                        <p class = "fs-4 lh-md text-white">Fresh Eats was the product of a project for a Server-Side Scripting class utilizing PHP. The idea behind this application is similar to
+                                        <p class = "fs-5 lh-md text-white">Fresh Eats was the product of a project for a Server-Side Scripting class utilizing PHP. The idea behind this application is similar to
                                             food services like Hello Fresh or Factor. The objective behind this product was to utilize PHP and MySQL to create a login and sign up process and save accounts
                                             within a database as well as validating user information. You could also implement any other PHP functionality of your choosing.</p>
-                                        <p class = "fs-4 lh-md text-white fw-bold"> Languages: HTML,CSS, PHP, MySQL</p>
+                                        <p class = "fs-5 lh-md text-white fw-bold"> Languages: HTML,CSS, PHP, MySQL</p>
                                     </section>
                                 </div>
                             </div>
@@ -73,7 +73,7 @@
                                     <div class="row margin-auto min-thirty-five">
                                         <h2 class = "fw-bold fs-1 text-center header-padding">The Beginning</h2>
                                         <div class = "col d-flex flex-column justify-content-center white-bg">
-                                                <img class = "text-center" src = "assets/fresh-eats-the-beginning.png" alt = "picture of fresh eats being viewed on a laptop">
+                                                <img class = "text-center" src = "assets/fresh-eats-the-beginning-white.png" alt = "picture of fresh eats being viewed on a laptop">
                                         </div>
                                         <div class = "col d-flex flex-column justify-content-center white-bg"></div>
                                             <p class = "lh-lg fs-5">Before adding in functionality, the HTML and CSS for the website was built from scratch. No template
@@ -123,6 +123,7 @@
                                                 <img class = "margin-auto phone-assets header-padding" src = "assets/Fresh-Eats-3.JPG" alt = "Picture of a responsive gallery">
                                             </div>
                                     </div>
+                                  </div>
                                     <div class = "container-fluid min-thirty-five gray-bg">
                                         <div class = "row">
                                             <h2 class = "fw-bold fs-1 header-padding text-center">Design Basics</h2>
@@ -140,7 +141,7 @@
                                             </div> 
                                         </div>
                                     </div>
-                                    <div class = "container-fluid min-thirty-five gray-bg header-padding">
+                                    <div class = "container-fluid min-thirty-five header-padding">
                                         <div class = "row">
                                             <h2 class = "fw-bold fs-1 header-padding text-center">Responsive Carousel</h2>
                                             <div class = "col d-flex flex-column just justify-content-center">
@@ -181,6 +182,18 @@
                                          </div>
                                          <div class = "container-fluid min-thirty-five gray-bg">
                                             <div class = "row">
+                                                <div class = "col d-flex flex-column justify-content-center">
+                                                    <h2 class ="fw-bold fs-1 header-padding text-center"> See all of this code in action</h2>
+                                                    <p class ="fs-5 lh-lg text-center"> Would you like to see this code in action? Click the button below to view.</p>
+                                                    <div class = "text-center"><a href="https://younited145894591.wordpress.com/" target = "_blank" class="btn btn-primary">See more</a></div>
+                                                </div>
+                                                <div class = "col d-flex flex-column justify-content-center">
+                                                    <img class = "phone-assets" src = "assets/fresh-eats-the-beginning.png" alt ="Fresh Eats Website">
+                                                </div>
+                                            </div>
+                                        </div>
+                                         <div class = "container-fluid min-thirty-five">
+                                            <div class = "row">
                                                     <h2 class = "fw-bold fs-1 header-padding text-center">Solution</h2>
                                                 <div class = "col d-flex flex-column justify-content-center">
                                                     <p class = "fs-3 lh-lg margin-auto"> By implementing some neat and advanced PHP and CSS, Fresh Eats is shown to be a site that is responsive and 
@@ -190,7 +203,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class = "container-fluid min-thirty-five">
+                                        <div class = "container-fluid min-thirty-five gray-bg">
                                             <div class = "row">
                                                 <div class = " col d-flex flex-column justify-content-center">
                                                     <h2 class = "fw-bold fs-1 header-padding text-center">Expected Results</h2>
@@ -201,7 +214,7 @@
                                                 </div>
                                              </div>
                                         </div>
-                                        <div class = "container-fluid">
+                                        <div class = "container-fluid header-padding">
                                             <div class = "row">
                                               <div class = "col d-flex flex-column text-center">
                                                 <footer>
@@ -211,6 +224,7 @@
                                               </div>
                                             </div>
                                           </div>
+                                      
                                           <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
                                           crossorigin="anonymous"></script>
                                       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
