Updated About,Projects,Style-Guide, and YouNite

--- a/projects.html
+++ b/projects.html
@@ -76,12 +76,12 @@
                 </div>
             </div>
           </div>
-          <div class="container-fluid">
+          <div class="container-fluid gray-bg">
             <div class="row">
                 <div class = "col d-flex flex-column justify-content-center">
                     <section class = "margin-auto project-name">
                         <h2 class = "fw-bold text-center">Coming Soon</h2>
-                        <p class = "project-des fw-bold text-center">Web and Mobile Friendly Application</p>
+                        <p class = "project-des fw-bold text-center">Imaginary App - Mobile</p>
                         <div class = "text-center"><p></p></div>
                     </section>
                 </div>
@@ -90,7 +90,7 @@
                 </div>
             </div>
           </div>
-          <div class = "container-fluid gray-bg letter-padding">
+          <div class = "container-fluid letter-padding">
             <div class = "row">
               <div class = "col d-flex flex-column text-center">
                 <footer>
