--- a/younite.html
+++ b/younite.html
@@ -34,7 +34,7 @@
             </div>
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col d-flex flex-column justify-content-center blue-bg synopsis min-thirty-five">
+                    <div class="col d-flex flex-column justify-content-center blue-bg synopsis ">
                         <h2 class = "text-white margin-auto lh-lg">YouNite,</h2>
                         <h2 class = "text-white margin-auto lh-lg">a <span class = "text-black">small</span> app to solve</h2>
                         <h2 class = "text-white margin-auto lh-lg"><span class = "text-black">big</span> social problems.</h2>
@@ -50,9 +50,9 @@
                     </div>
                     <div class = "col d-flex flex-column justify-content-center">
                         <section class = "margin-auto line-heights">
-                            <p class = "fs-4 lh-md">YouNite is an imaginary application made for a school assignment. My assignment was to create a social app. I was tasked to make an app icon and include some images of what my app would look like.
-                            Lastly, I had to build a mini-website that would market my app. One of my projects, once I graduate college, is to make this project a reality. </p>
-                            <p class = "fs-4 lh-md text-black fw-bold"> Program: Adobe Illustrator, MockFlow, Adobe Draw, WordPress</p>
+                            <p class = "fs-5 lh-md">YouNite is an imaginary application made for a school assignment. My assignment was to create a social app. I was tasked to make an app icon and include some images of what my app would look like.
+                                 Lastly, I had to build a mini-website that would market my app. One of my projects, once I graduate college, is to make this project a reality. </p>
+                            <p class = "fs-5 lh-md text-black fw-bold"> Programs: Adobe Illustrator, MockFlow, Adobe Draw, WordPress</p>
                         </section>
                     </div>
                 </div>
@@ -62,8 +62,10 @@
                     <div class = "col d-flex flex-column justify-content-center min-thirty-five gray-bg">
                         <section class = "margin-auto line-heights">
                             <h2 class = "fw-bold fs-1 text-center header-padding">The Problem</h2>
-                            <p class = " margin-auto lh-lg fs-5">When brainstorming ideas, I did not want to create just another social app. I wanted to create an app that would solve a problem. During the production of this app,  hate towards those of Asian descent was prominent due to the lasting COVID-19 pandemic.
-                             People of darker skin are still facing prejudice and given unfair treatment. If only the world was more educated about other cultures, than maybe people can start to understand one another. Then maybe everyone would be treated as equal. By giving everyone a safe place to share their culture, YouNite aims to increase people's awareness of culture in a fun and social way. </p>
+                            <p class = " margin-auto lh-lg fs-5"> When brainstorming ideas, I did not want to create just another social app. I wanted to create an app that would solve a problem.
+                                 During the production of this app, hate towards those of Asian descent was prominent due to the lasting COVID-19 pandemic. People of darker skin are still facing prejudice and being given unfair treatment.
+                                  If only the world was more educated about other cultures then maybe people can start to understand one another. Then maybe everyone would be treated as equal. By giving everyone a safe place to share their culture, YouNite aims to increase people's awareness of culture in a fun and social way.
+                            </p>
                         </section>
                     </div>
                     <div class = "container-fluid">
@@ -80,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class = "container-fluid min-thirty-five">
+                    <div class = "container-fluid min-thirty-five  gray-bg">
                         <div class = "row">
                             <div class = " col d-flex flex-column justify-content-center ">
                                 <h2 class = "fw-bold fs-1 header-padding text-center">Logo in the Process</h2>
@@ -94,19 +96,18 @@
                                 <img class = "phone-assets" src = "assets/younite-site-icon.PNG" alt = "younite logo in the process">
                             </div>
                             <div class = " col d-flex flex-column justify-content-center">
-                                <img class = "phone-assets" src = "assets/iphone Icon.jpg" alt = "younite logo in the beginning">
+                                <img class = "phone-assets" src = "assets/iphone_Icon.png" alt = "younite logo in the beginning">
                             </div>
                         </div>
                         </div>
-                        <div class = "container-fluid min-thirty-five gray-bg">
+                        <div class = "container-fluid min-thirty-fives gray-bg">
                             <div class = "row">
                                 <div class = "col d-flex flex-column justify-content-center">
                                     <img class = "initial-img" src = "assets/Hi-fi Proto Phone.png" alt = "phone wireframe">
                                 </div>
                                 <div class = "col d-flex flex-column justify-content-center">
-                                    <p class = "fs-3"> So how does this social app work? With YouNite, users will be able to post everything relating to their culture. Through hashtags, users
-                                        find everyone's post within social topics exampled on the left. There will be multiple sections like Music, Dance, Food, and more. Users can also
-                                        message other users, create group chats, leave a comment on posts, and explore information on all cultures.</p>
+                                    <p class = "fs-5 par-max">So how does this social app work? With YouNite, users will be able to post everything relating to their culture. Through hashtags, users find everyone's post within social topics exampled on the left.
+                                         There will be multiple sections like Music, Dance, Food, and more. Users can also message other users, create group chats, leave a comment on posts, and explore information on all cultures. </p>
                                 </div>
                             </div>
                         </div>
@@ -121,33 +122,45 @@
                                         <img class = "phone-assets" src = "assets/Hi-fi Proto.PNG" alt = "younite logo in the beginning">
                                     </div>
                                     <div class = " col d-flex flex-column justify-content-center">
-                                        <img class = "phone-assets" src = "assets/hi-fi-2.PNG" alt = "younite logo in the process">
+                                        <img class = "phone-assets" src = "assets/hi-fi-2-check.png" alt = "younite logo in the process">
                                     </div>
                                 </div>
                             </div>
-                            <div class = "container-fluid min-thirty-five">
+                            <div class = "container-fluid min-thirty-five gray-bg">
                                 <div class = "row">
                                     <h2 class = "fw-bold fs-1 header-padding text-center">Solution</h2>
                                     <div class = " col d-flex flex-column justify-content-center">
-                                        <img class = "initial-img" src = "assets/iphone Icon.jpg" alt="younite icon">
+                                        <img class = "initial-img" src = "assets/iphone_Icon.png" alt="younite icon">
                                     </div>
                                     <div class = "col d-flex flex-column justify-content-center">
-                                        <p class = "fs-3 lh-lg">   This platform allows individuals of every culture and ethnicity to have a safe environment to share their culture with others so that people can not only be proud of who they are
-                                              but also educate others in the process. By mimicking all the popular social platforms in the market now regarding posting, hashtags, commenting, and direct messaging,
-                                              users will feel right at home with YouNite.  </p>
+                                        <p class = "fs-5 lh-lg par-max">This platform allows individuals of every culture and ethnicity to have a safe environment to share their culture with others so that people can not only be proud of who they are but also educate others in the process.
+                                             By mimicking all the popular social platforms in the market now regarding posting, hashtags, commenting, and direct messaging, users will feel right at home with YouNite.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class = "container-fluid min-thirty-five">
                                 <div class = "row">
-                                    <div class = " col d-flex flex-column justify-content-center gray-bg">
-                                        <h2 class = "fw-bold fs-1 header-padding text-center">Expected Results</h2>
-                                        <p class = "fs-3 lh-lg margin-auto"> I would expect YouNite to perform well as a platform, but more importantly, I expect it to increase the awareness that people have regarding culture.
-                                            I firmly believe YouNite has great significance in this society. Now is the time for people to become more aware of each other's differences and more accepting of them. If people were given a safe environment to share and educate others on their culture in a fun and positive way, perhaps individuals would be less likely to create prejudices and stereotypical thoughts about races different to them. In the end, people are afraid of things they
-                                            do not understand, and this would be the perfect platform for individuals to educate themselves.</p>
+                                    <div class = "col d-flex flex-column justify-content-center">
+                                        <h2 class ="fw-bold fs-1 header-padding text-center"> View Younite's WordPress Site</h2>
+                                        <p class ="fs-5 lh-lg text-center"> Would you like to see Younite's promotional website? Click the button below to view.</p>
+                                        <div class = "text-center"><a href="https://younited145894591.wordpress.com/" target = "_blank" class="btn btn-primary">See more</a></div>
                                     </div>
+                                    <div class = "col d-flex flex-column justify-content-center">
+                                        <img class = "phone-assets" src = "assets/younitecomputer.png" alt =" Younite website made with WordPress">
+                                    </div>
+                                </div>
                             </div>
-                            <div class = "container-fluid">
+                            <div class = "container-fluid min-thirty-five gray-bg">
+                                <div class = "row">
+                                    <div class = " col d-flex flex-column justify-content-center">
+                                        <h2 class = "fw-bold fs-1 header-padding text-center">Expected Results</h2>
+                                        <p class = "fs-5 lh-lg margin-auto">I would expect YouNite to perform well as a platform, but more importantly, I expect it to increase the awareness that people have regarding culture. I firmly believe YouNite has great significance in this society. 
+                                            Now is the time for people to become more aware of each other's differences and more accepting of them. If people were given a safe environment to share and educate others on their culture in a fun and positive way, perhaps individuals would be less likely to create prejudices and stereotypical thoughts about races different from them.
+                                             In the end, people are afraid of things they do not understand, and this would be the perfect platform for individuals to educate themselves. </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "container-fluid header-padding">
                                 <div class = "row">
                                   <div class = "col d-flex flex-column text-center">
                                     <footer>
