--- a/style-guide.html
+++ b/style-guide.html
@@ -43,9 +43,8 @@
                     </div>
                     <div class = "col d-flex flex-column justify-content-center">
                         <section class = "margin-auto line-heights">
-                            <p class = "fs-4 lh-md"> For the senior project, my team and I were tasked with choosing a website or application to improve and revamp.
-                                My team and I chose the <a href = "https://www.myflorida.com/" target = "_blank" > MyFlorida</a> website to redesign and redevelop. I took the initiative to be the designer of the team
-                                and did research.</p>
+                            <p class = "fs-4 lh-md">For the senior project, my team and I were tasked with choosing a website or application to improve and revamp. My team and I chose the
+                                 <a href = "https://www.myflorida.com/" target = "_blank" > MyFlorida</a> website to redesign and redevelop. I took the initiative to be the designer of the team and did research.</p>
                                 <p class = "fs-4 lh-md text-black fw-bold"> Programs: Adobe Illustrator, Canva</p>
                         </section>
                     </div>
@@ -56,9 +55,8 @@
                     <div class = "col d-flex flex-column justify-content-center min-thirty-five gray-bg">
                         <section class = "margin-auto line-heights">
                             <h2 class = "fw-bold fs-1 text-center header-padding">The Problem</h2>
-                            <p class = " margin-auto lh-lg fs-5 ">Through analysis, I found the website's major problem was a lack of consistent styling. This was because all links
-                                on the website lead to external pages on a completely different website. In reality, the website only had one page: the home page. Even considering the inconsistent styling,
-                                the styling that was present looked outdated and lackluster.
+                            <p class = " margin-auto lh-lg fs-5 ">Through analysis, I found the website's major problem was a lack of consistent styling. This was because all links on the website lead to external pages on a completely different website.
+                                 In reality, the website only had one page: the home page. Even considering the inconsistent styling, the styling that was present looked outdated and lackluster.
                             </p>
                         </section>
                     </div>
@@ -125,9 +123,8 @@
                         <div class = "row">
                                 <h2 class = "fw-bold fs-1 header-padding text-center">Solution</h2>
                             <div class = "col d-flex flex-column justify-content-center">
-                                <p class = "fs-3 lh-lg margin-auto"> Through picking a new and more vibrant color pallete, legible fonts, and consistent styling, we improved the design of MyFlorida.
-                                    Ensuring the layout of MyFloria was consistent was imperative so users can navigate through the site easily. Design accessibility was taken into account when 
-                                creating the color choices to ensure a pleasant experiences for all users. </p>
+                                <p class = "fs-3 lh-lg margin-auto"> By picking a new and more vibrant color palette, legible fonts, and consistent styling, we improved the design of MyFlorida.
+                                     Ensuring the layout of MyFloria was consistent was imperative so users can navigate through the site easily. Design accessibility was taken into account when creating the color choices to ensure a pleasant experience for all users.</p>
                             </div>
                         </div>
                     </div>
@@ -135,8 +132,7 @@
                         <div class = "row">
                             <div class = " col d-flex flex-column justify-content-center">
                                 <h2 class = "fw-bold fs-1 header-padding text-center">Expected Results</h2>
-                                <p class = "fs-3 lh-lg margin-auto"> One could expect greater website traffic due to the changes of the website. Users will find a more pleasant experience
-                                    using the website since it is easier to navigate and more pleasant to look at.
+                                <p class = "fs-3 lh-lg margin-auto"> One could expect greater website traffic due to the changes to the website. Users will find a more pleasant experience using the website since it is easier to navigate and more pleasant to look at.
                                 </p>
                             </div>
                          </div>
