Photo updates, font-size tweaks, and height fixes

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     </div> 
                     <div class = "col d-flex flex-column justify-content-center">
                          <section class = "about-me-body line-heights">
-                            <p class = "lh-lg">And I love everything about Web Development. Some might consider me a unique case because I take interest in both UI/UX Design and Front-End Development.
+                            <p class = "lh-lg fs-5">And I love everything about Web Development. Some might consider me a unique case because I take interest in both UI/UX Design and Front-End Development.
                                 Design accessibility is also a very important topic for me. I have a great passion for this industry and intend to use it! Having recently graduated
                                 from the University of Central Florida with my Bachelor’s degree in Digital Media, I am more than elated to put my skills out in the real world to make a difference.</p>
                         </section>
@@ -81,9 +81,9 @@
                         <hr style="height:0px;border-width:0;color:white;background-color:white">
                         <hr style="height:0px;border-width:0;color:white;background-color:white">
                         <ul style="list-style-type:none"class = "...">
-                            <li class = "lh-lg"> I am absolutely obsessed with dogs</li>
-                            <li class = "lh-lg"> Most days you will find me in the gym lifting weights</li>
-                            <li class = "lh-lg"> I have played the piano since I was 6 years old</li>
+                            <li class = "lh-lg fs-5"> I am absolutely obsessed with dogs</li>
+                            <li class = "lh-lg fs-5"> Most days you will find me in the gym lifting weights</li>
+                            <li class = "lh-lg fs-5"> I have played the piano since I was 6 years old</li>
                         </ul>
                         </section>
                     </div>
