--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                     </section>
                 </div>
                 <div class = "col">
-                    <img class = "phone-assets" src = "assets/gym-rats-phone.png" alt = "An app icon for an imaginary app called GymRats showing the login page with a picture of a gym in the background">
+                    <img class = "phone-assets" src = "assets/gym-rats-phone-gray.png" alt = "An app icon for an imaginary app called GymRats showing the login page with a picture of a gym in the background">
                 </div>
             </div>
           </div>
