Fixed younite font and reverted home height

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                     <a href="projects.html" class="btn btn-primary">See more</a>
                 </section>
             </div>
-            <div class = "col coral-bg max-height">
+            <div class = "col coral-bg">
                 <img class="phone-assets" src = "assets/Hi-fi Proto Phone.png" alt = "An imaginary app design with a photo of a women dancing with white text hovering over it that says dance">
             </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row">
-            <div class = "col coral-bg max-height">
+            <div class = "col coral-bg">
                 <img class="phone-assets" src = "assets/Fresh Eats phone.JPG" alt = "An imaginary application that says Fresh Eats on it.">
             </div>
             <div class = "col d-flex flex-column justify-content-center">
