--- a/younite.html
+++ b/younite.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid">
+            <div class="container-fluid min-thirty-five">
                 <div class="row align-items-center">
                     <div class="col d-flex flex-column justify-content-center blue-bg synopsis ">
                         <h2 class = "text-white margin-auto lh-lg">YouNite,</h2>
@@ -78,7 +78,7 @@
                                 <img class = "initial-img margin-auto" src = "assets/younite-name-prototype-2-500.png" alt = "early concept of younite app">
                             </div>   
                             <div class = "col d-flex flex-column justify-content-center">
-                                <p class = "fs-5 lh-lg margin-auto"> From the beginning, I wanted the applications logo to have the earth included in it to represent the world and all people.</p>
+                                <p class = "fs-4 lh-lg margin-auto"> From the beginning, I wanted the applications logo to have the earth included in it to represent the world and all people.</p>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                                 <div class = "row">
                                     <div class = "col d-flex flex-column justify-content-center">
                                         <h2 class ="fw-bold fs-1 header-padding text-center"> View Younite's WordPress Site</h2>
-                                        <p class ="fs-5 lh-lg text-center"> Would you like to see Younite's promotional website? Click the button below to view.</p>
+                                        <p class ="fs-4 lh-lg text-center"> Would you like to see Younite's promotional website? Click the button below to view.</p>
                                         <div class = "text-center"><a href="https://younited145894591.wordpress.com/" target = "_blank" class="btn btn-primary">See more</a></div>
                                     </div>
                                     <div class = "col d-flex flex-column justify-content-center">
