--- a/younite.html
+++ b/younite.html
@@ -140,9 +140,9 @@
                             </div>
                             <div class = "container-fluid min-thirty-five">
                                 <div class = "row">
-                                    <div class = "col d-flex flex-column justify-content-center">
-                                        <h2 class ="fw-bold fs-1 header-padding text-center"> View Younite's WordPress Site</h2>
-                                        <p class ="fs-4 lh-lg text-center"> Would you like to see Younite's promotional website? Click the button below to view.</p>
+                                    <div class = "col d-flex flex-column justify-content-center ">
+                                        <h2 class ="fw-bold fs-1 header-padding text-center margin-auto"> View Younite's WordPress Site</h2>
+                                        <p class ="fs-4 lh-lg text-center margin-auto"> Would you like to see Younite's promotional website? Click the button below to view.</p>
                                         <div class = "text-center"><a href="https://younited145894591.wordpress.com/" target = "_blank" class="btn btn-primary">See more</a></div>
                                     </div>
                                     <div class = "col d-flex flex-column justify-content-center">
