view site text constraint

--- a/fresh-eats.html
+++ b/fresh-eats.html
@@ -183,8 +183,8 @@
                                          <div class = "container-fluid min-thirty-five gray-bg">
                                             <div class = "row">
                                                 <div class = "col d-flex flex-column justify-content-center">
-                                                    <h2 class ="fw-bold fs-1 header-padding text-center"> See all of this code in action</h2>
-                                                    <p class ="fs-4 lh-lg text-center"> Would you like to see this code in action? Click the button below to view.</p>
+                                                    <h2 class ="fw-bold fs-1 header-padding text-center margin-auto"> See all of this code in action</h2>
+                                                    <p class ="fs-4 lh-lg text-center margin-auto"> Would you like to see this code in action? Click the button below to view.</p>
                                                     <div class = "text-center"><a href="https://younited145894591.wordpress.com/" target = "_blank" class="btn btn-primary">See more</a></div>
                                                 </div>
                                                 <div class = "col d-flex flex-column justify-content-center">
