fixed div issue in fresh-eats

--- a/fresh-eats.html
+++ b/fresh-eats.html
@@ -69,18 +69,21 @@
                                         </p>
                                     </section>
                                 </div>
+                            </div>
+                            </div>
                                 <div class="container-fluid">
                                     <div class="row margin-auto min-thirty-five">
                                         <h2 class = "fw-bold fs-1 text-center header-padding">The Beginning</h2>
                                         <div class = "col d-flex flex-column justify-content-center white-bg">
                                                 <img class = "text-center" src = "assets/fresh-eats-the-beginning-white.png" alt = "picture of fresh eats being viewed on a laptop">
                                         </div>
-                                        <div class = "col d-flex flex-column justify-content-center white-bg"></div>
+                                        <div class = "col d-flex flex-column justify-content-center white-bg">
                                             <p class = "lh-lg fs-4">Before adding in functionality, the HTML and CSS for the website was built from scratch. No template
                                                 and no frameworks. The website layout was built utilizing a grid system and media quieries for responsiveness. Within the HTML, semantics were
                                                 used to make navigating the site easier for those who use screen readers and to optimize for search engines. I believe it is always good to have
                                                 a great HTML and CSS foundation before adding any functionality and with this site I aimed to do just that.
                                             </p>
+                                        </div>
                                         </div>
                                     </div>
                                 <div class = "container-fluid gray-bg">
